# obot-python

./: README.md  pyproject.toml  test.ipynb
obot/: async_client.py  client.py  exceptions.py  sync_client.py
obot/api/: agents.py  base.py  chat.py  credentials.py  models.py  runs.py  threads.py  tools.py  webhooks.py  workflows.py
obot/models/: __init__.py  agent.py  conversation.py  credential.py  model.py  model_provider.py  run.py  thread.py  tool.py  webhook.py  workflow.py
